--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="/css/questions.css">
-  <script type="module" src="/js/questions.js"></script>
+    {{#if css}}
+  <link rel="stylesheet" href="/css/{{css}}.css">
+  {{/if}}
+
+  {{#if js}}
+  <script type="module" src="/js/{{js}}.js"></script>
+  {{/if}}
+  <link rel="stylesheet" href="/css/main.css">
+  <script src="/js/main.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
