--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -1,22 +1,34 @@
+{{>header}}
 {{#if question}}
   <div class="questionWrapper1 flex flex-col mx-20">
-    <div class="flex flex-row basis-1/5 border-b-4 py-7">
+    <div class="flex flex-row basis-1/5 border-b-2 py-7">
     <div class="basis-4/5"><h1 class="font-bold text-2xl text-slate-700">{{title}}</h1></div>
     <div class="basis-1/5"><button class="rounded-lg px-2 py-2  bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" ><a href="/questions/question">Ask Question</a></button></div>
     </div>
     <div class="basis-4/5 flex flex-row">
-      <div class="questionStats basis-1/5 my-4 mx-4">
-        <span class="material-symbols-outlined orange600 rounded-full border-2 hover:bg-orange-100 p-4 hover:cursor-pointer" id="thumb_up">thumb_up</span><br>
+      <div class="questionStats basis-2/7 my-4 mx-4">
+        <span class="material-symbols-outlined rounded-full border-2 hover:bg-orange-100 p-4 hover:cursor-pointer" id="thumb_up">thumb_up</span><br>
         <span class="inline-block max-w-[1px] text-center my-2 mx-6 text-center" id="votes" value="{{votes}}">{{votes}}</span><br>
         <span class="material-symbols-outlined rounded-full border-2 hover:bg-orange-100 p-4 hover:cursor-pointer" id="thumb_down">thumb_down</span><br>
-        <button id="questionId" value="{{question._id}}" hidden>{{question._id}}</button>
+        <button id="questionId" value="{{question._id}}" hidden>{{question._id}}</button><br>
+        <span class="material-symbols-outlined mx-4 hover:cursor-pointer">bookmark</span>
       </div>
-      <div class="question basis-4/5">
-        <p class="p-3">{{question.problemDetails}}</p>
-        <p class="p-3">{{question.attemptDetails}}</p>
-             {{#each question.tagsObj}}
-          <button class="tags rounded-md border-slate-900 outline-0 px-2 py-1 bg-sky-100 text-sky-600 text-sm font-bold hover:bg-sky-200" value="{{tag}}">{{tag}}</button>
-        {{/each}}
+      <div class="question basis-5/7 flex flex-col">
+        <div>
+          <p class="p-3">{{question.problemDetails}}</p>
+          <p class="p-3">{{question.attemptDetails}}</p>
+          {{#each question.tagsObj}}
+            <button class="tags rounded-md border-slate-900 outline-0 mx-3 px-2 py-1 bg-sky-100 text-sky-600 text-sm font-bold hover:bg-sky-200" value="{{tag}}">{{tag}}</button>
+          {{/each}}
+        </div>
+        <div class="operations my-4 mx-4 text-sm font-light">
+          <span class="hover:text-sky-700 hover:cursor-pointer " id="editQuestion">edit &nbsp;</span>&nbsp;
+          <span class="hover:text-sky-700 hover:cursor-pointer " id="deleteQuestion">delete</span>
+        </div>
+
+      </div>
+      <div class="emptyDivQuestion basis-1/7" hidden>
+        I am a hidden div only contributing to style
       </div>
     </div>
   </div>
