search, and other

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@ body
 }
 .navbar 
 {
-background-color: #000000;
+background-color: #fff;
 padding: 15px;
 display: flex;
 justify-content: space-between;
