several css fixes and search optimization

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -2,10 +2,10 @@
   <nav class="navbar">
     <a href="/">
       <img src="/images/logo.png" alt="Logo" class="logo">
-    </a>
-    <div class="nav-links">
-      <a href="#">Communities</a>
-      <a href="/questions">Questions</a>
+    </a> 
+    <div class="nav-links text-slate-700">
+      <a href="#" class="hover:text-sky-700">Communities</a>
+      <a href="/questions" class="hover:text-sky-700">Questions</a>
     </div>
     <button class="login-btn">Login</button>
   </nav>
