--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -3,9 +3,9 @@
     <a href="/">
       <img src="/images/logo.png" alt="Logo" class="logo">
     </a>
-    <div class="search mr-40">
-      <span class="material-symbols-outlined pb-2 mr-2">search</span>
-      <textarea class="mr-60" name="search" id="search" cols="75" rows="1"></textarea>
+    <div class="search mr-40 ml-10">
+      <span class="material-symbols-outlined pb-2 mr-2 ml-5">search</span>
+      <textarea class="mr-60" name="search" id="search" cols="75" rows="1" placeholder="Enter keywords relevent to your search"></textarea>
     </div>
   </nav>
 </header>
