--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -1,21 +1,39 @@
 .material-symbols-outlined{
   font-variation-settings:
-  'FILL' 100,
+  'FILL' 0,
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
 }
 
-.selected{ 
-  .material-symbols-outlined {
+
+
+.thumb_up_icon.selected {
+  color: green;
+}
+
+.thumb_down_icon.selected {
+  color: red;
+}
+
+.bookmark_icon.selected {
+  color: black;
   font-variation-settings:
   'FILL' 100,
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
 }
-}
 
+.mode_heat_icon{
+  color: rgb(237, 79, 0);
+  vertical-align: top;
+  font-variation-settings:
+  'FILL' 100,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
 
 #questionTitle{
   resize: none;
