--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -7,18 +7,18 @@
     </div>
     <div class="basis-4/5 flex flex-row">
       <div class="questionStats basis-2/7 my-4 mx-4">
-        <span class="material-symbols-outlined rounded-full border-2 hover:bg-orange-100 p-4 hover:cursor-pointer" id="thumb_up">thumb_up</span><br>
-        <span class="inline-block max-w-[1px] text-center my-2 mx-6 text-center" id="votes" value="{{votes}}">{{votes}}</span><br>
-        <span class="material-symbols-outlined rounded-full border-2 hover:bg-orange-100 p-4 hover:cursor-pointer" id="thumb_down">thumb_down</span><br>
+        <span class="material-symbols-outlined rounded-full hover:bg-orange-100 p-4 hover:cursor-pointer thumb_up_icon" id="thumb_up">thumb_up</span><br>
+        <span class="inline-block max-w-[1px] text-center my-2 mx-6 text-center" id="votes" value="{{question.votes}}">{{question.votes}}</span><br>
+        <span class="material-symbols-outlined rounded-full hover:bg-orange-100 p-4 hover:cursor-pointer thumb_down_icon" id="thumb_down">thumb_down</span><br>
         <button id="questionId" value="{{question._id}}" hidden>{{question._id}}</button><br>
-        <span class="material-symbols-outlined mx-4 hover:cursor-pointer">bookmark</span>
+        <span class="material-symbols-outlined mx-4 hover:cursor-pointer bookmark_icon" id="bookmark">bookmark</span>
       </div>
       <div class="question basis-5/7 flex flex-col">
         <div>
-          <p class="p-3">{{question.problemDetails}}</p>
-          <p class="p-3">{{question.attemptDetails}}</p>
+          <p class="p-3 whitespace-pre-wrap text-sm">{{question.problemDetails}}</p>
+          <p class="p-3 whitespace-pre-wrap text-sm">{{question.attemptDetails}}</p>
           {{#each question.tagsObj}}
-            <button class="tags rounded-md border-slate-900 outline-0 mx-3 px-2 py-1 bg-sky-100 text-sky-600 text-sm font-bold hover:bg-sky-200" value="{{tag}}">{{tag}}</button>
+            <button class="tags rounded-md border-slate-900 outline-0 mx-1 px-2 py-1 bg-sky-100 text-sky-600 text-sm font-bold hover:bg-sky-200" value="{{tag}}">{{tag}}</button>
           {{/each}}
         </div>
         <div class="operations my-4 mx-4 text-sm font-light">
