--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -4,7 +4,10 @@
   <div class="leftWrapper basis-1/5 border-2">1</div>
     <div class="questionsWrapper basis-3/5">
       <div class="flex flex-row py-4 border-b-2">
-        <div class="basis-4/5"><h1 class="my-4 mx-8 text-4xl font-bold">{{title}}</h1></div>
+        <div class="basis-3/5"><h1 class="my-4 mx-8 text-4xl font-bold">{{title}}</h1></div>
+        <div class="basis-1/5">
+         <button class="rounded-full m-1 p-2 align-items-center justify-content-center hover:bg-orange-400 focus:bg-orange-100">top&nbsp;<span class="material-symbols-outlined mode_heat_icon">mode_heat</span></button>
+        </div>
         <div class="basis-1/5"><button class="rounded-lg px-2 py-2 my-4 bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" ><a href="/questions/question">Ask Question</a></button></div>
       </div>
       <div id="searchResultsContainer" class=""></div>
@@ -12,11 +15,11 @@
         {{#each questions}}
         <div class="questionWrapper1 flex flex-row border-b-2 px-2">
           
-          <div class="questionStats my-4 mx-8 whitespace-normal basis-1/3">
+          <div class="questionStats my-4 ml-8 ml-10 whitespace-normal basis-1/3">
             <h4 class="pl-5 text-sm text-normal"><span class="ml-6">{{votes}} votes</span></h3>
             <h4 class="pl-5 text-sm text-extralight text-slate-500"><span class="ml-1">{{comments.length}} answers</span></h3>
           </div>
-          <div class="question basis-2/3 my-4 h-auto whitespace-normal ">
+          <div class="question basis-2/3 my-4 w-fit ml-5 h-auto whitespace-normal text-ellipsis overflow-hidden">
             <h3 class="text-sky-600 text-lg font-semibold hover:text-sky-700"><a href="/questions/{{_id}}">{{title}}</a></h3>
             <p class="text-slate-500 py-6 my-2 text-ellipsis overflow-hidden max-h-36">{{problemDetails}}</p>
             <ul>
