--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -4,12 +4,20 @@
   <div class="leftWrapper basis-1/5 border-2">1</div>
     <div class="questionsWrapper basis-3/5">
       <div class="flex flex-row py-4 border-b-2">
-        <div class="basis-3/5"><h1 class="my-4 mx-8 text-4xl font-bold">{{title}}</h1></div>
-        <div class="basis-1/5">
-         <button class="rounded-full m-1 p-2 align-items-center justify-content-center hover:bg-orange-400 focus:bg-orange-100">top&nbsp;<span class="material-symbols-outlined mode_heat_icon">mode_heat</span></button>
-        </div>
+        <div class="basis-4/5"><h1 class="my-4 mx-8 text-4xl font-bold">{{title}}</h1></div>
         <div class="basis-1/5"><button class="rounded-lg px-2 py-2 my-4 bg-sky-600 text-white hover:bg-sky-700" value="Ask Question" ><a href="/questions/question">Ask Question</a></button></div>
       </div>
+        <div class="filter-options flex flex-row">
+          <div class="basis-4/5">
+            <p hidden>1</p>
+          </div>
+          <div class="basis-1/10">
+            <button class="rounded-full m-1 p-2 align-items-center justify-content-center hover:bg-yellow-400 focus:bg-yellow-200 active:bg-yellow-200">New&nbsp;<span class="material-symbols-outlined flash_on_icon text-sky-300" id="flash_on">flash_on</span></button>
+          </div>
+          <div class="basis-1/10">
+            <button class="rounded-full m-1 p-2 align-items-center justify-content-center hover:bg-yellow-400 focus:bg-yellow-200 active:bg-yellow-200">top&nbsp;<span class="material-symbols-outlined mode_heat_icon" id="mode_heat">mode_heat</span></button>
+          </div>
+        </div>
       <div id="searchResultsContainer" class=""></div>
       <div id="questionsWrapper1">
         {{#each questions}}
