tailwind fixes and merge resolution

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
             <p class="error" id="passwordError" hidden>Please enter a password.</p>
 
             <br>
-            <button type="submit" class="registerButton" id="register">Login</button>
+            <button type="submit" class="registerButton block my-2 bg-green-500" id="register">Login</button>
             <br>
             {{#if error.length}}
                 <p class="error">{{error}}</p>
