--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 
 body
 {
+    background-color: white;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     min-height: 100vh;
