--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -1,104 +1,57 @@
-.material-symbols-outlined{
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+.material-symbols-outlined {
+  font-family: 'Material Icons Outlined';
+  font-size: 24px;
+  color: #757575;
 }
 
-
-
 .thumb_up_icon.selected {
-  color: green;
+  color: #4CAF50;
 }
 
 .thumb_down_icon.selected {
-  color: red;
+  color: #F44336;
 }
 
 .bookmark_icon.selected {
   color: black;
-  font-variation-settings:
-  'FILL' 100,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  fill: 100%;
 }
 
-.mode_heat_icon{
-  color: rgb(237, 79, 0);
+.mode_heat_icon {
+  color: #EF4F00;
   vertical-align: top;
-  font-variation-settings:
-  'FILL' 100,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
 }
 
-.flash_on_icon{
+.flash_on_icon {
   vertical-align: bottom;
-  font-variation-settings:
-  'FILL' 100,
-  'wght' 300,
-  'GRAD' 0,
-  'opsz' 24
 }
 
-#questionTitle{
+#questionTitle,
+#problemDetails,
+#attemptDetails,
+#tags {
   resize: none;
   outline: none;
+  border: 1px solid #E0E0E0;
+  border-radius: 4px;
+  padding: 5px;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
 }
 
-#problemDetails{
+.goodPractices,
+.fieldWrapper {
+  border: 1px solid #E0E0E0;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+#search {
   resize: none;
   outline: none;
+  border: 1px solid #E0E0E0;
+  border-radius: 4px;
+  padding: 5px;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
 }
-
-#attemptDetails{
-  resize: none;
-  outline: none;
-}
-
-#tags{
-  resize: none;
-  outline: none;
-}
-
-#questionTitle:focus{
-  resize: none;
-  outline: none;
-}
-
-#problemDetails:focus{
-  resize: none;
-  outline: none;
-}
-
-#attemptDetails:focus{
-  resize: none;
-  outline: none;
-}
-
-#tags:focus{
-  resize: none;
-  outline: none;
-}
-
-.goodPractices{
-  border-width: 1px;
-}
-
-.fieldWrapper{
-  border-width: 1px;
-}
-
-#search{
-  resize: none;
-  outline: none;
-}
-
-#search:focus{
-  resize: none;
-  outline: none;
-}
-
