--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{title}}</title>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     {{#if css}}
   <link rel="stylesheet" href="/css/{{css}}.css">
   {{/if}}
@@ -26,3 +29,4 @@
   
 </body>
 </html>
+
