--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -3,9 +3,18 @@
     <a href="/">
       <img src="/images/logo.png" alt="Logo" class="logo">
     </a>
-    <div class="search mr-40 ml-10">
+    <div class="search mr-10 ml-10">
       <span class="material-symbols-outlined pb-2 mr-2 ml-5">search</span>
-      <textarea class="mr-60" name="search" id="search" cols="75" rows="1" placeholder="Enter keywords relevent to your search"></textarea>
+      <textarea class="mr-10" name="search" id="search" cols="75" rows="1" placeholder="Enter keywords relevent to your search"></textarea>
     </div>
+      {{#if user}}
+        <a href="/userActivity" class="hover:text-sky-700">{{user.stevensEmail}}</a>
+      {{/if}}
+    </div>
+      {{#if user}}
+        <button class="logout-btn">Logout</button>
+      {{else}}
+        <button class="login-btn">Login</button>
+      {{/if}}
   </nav>
 </header>
