--- a/public/css/userActivity.css
+++ b/public/css/userActivity.css
@@ -1,3 +1,8 @@
+.setting-icon
+{
+color: white;
+max-height: 7vh;
+}
 .background-container {
     position: relative;
     width: 100%;
@@ -7,14 +12,14 @@
     background-position: center;
   }
 
-  .overlay {
-    background-color: rgba(0, 0, 0, 0.3); /* Adjust the opacity and color as needed */
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+.overlay {
+background-color: rgba(0, 0, 0, 0.3); /* Adjust the opacity and color as needed */
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
 
 .bigtext 
 {
@@ -51,7 +56,7 @@ select {
     margin-bottom: 20px;
 }
 
-.registerButton {
+.settingButton {
     width: 100%;
     background-color: #03cb09;
     color: #ffffff;
@@ -62,7 +67,7 @@ select {
     font-size: 16px;
 }
 
-.registerButton:hover {
+.settingButton:hover {
     background-color: #45a049;
 }
 
