--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
-{{>header}}
+{{>headerEmpty}}
 <div class="background-container">
     <div class="overlay">
         <form id="login-form" action="/login" method="POST">
-
+            <h1 class="bigtext">LOGIN</h1>
             <label for="emailAddressInput">Email Address:</label>
             <input type="email" id="emailAddressInput" name="emailAddressInput">
             <p class="error" id="emailError" hidden>Please enter your Stevens email</p>
