--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,12 +1,9 @@
-{{!--
 
-registration handelbars
-
---}}
-{{>header}}
+{{>headerEmpty}}
 <div class="background-container">
     <div class="overlay">
         <form id="registration-form" action="/register" method="POST">
+            <h1 class="bigtext">REGISTER</h1>
             <label for="firstNameInput">First Name:</label>
             <input type="text" id="firstNameInput" name="firstNameInput">
             <p class="error" id="firstNameError" hidden>Please enter valid first name.</p>
@@ -48,7 +45,7 @@ registration handelbars
             <p class="error" id="academicStatusError" hidden>Please select a role.</p>
             <br>
             <br>
-            <button type="submit" class="registerButton" id="register">Register</button>
+            <button type="submit" class="registerButton block my-2 bg-green-500" id="register">Register</button>
             {{#if error.length}}
                 <p class="error">{{error}}</p>
             {{/if}}
