search bug fixes and css fixes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 {{>header}}
-<div class="background-container">
+<div class="background-container h-screen fixed">
     <div class="overlay">
         <form id="login-form" action="/login" method="POST">
 
@@ -25,4 +25,3 @@
 
     </div>
 </div>
-{{>footer}}
