--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,7 +4,7 @@ registration handelbars
 
 --}}
 {{>header}}
-<div class="background-container">
+<div class="background-container h-screen fixed">
     <div class="overlay">
         <form id="registration-form" action="/register" method="POST">
             <label for="firstNameInput">First Name:</label>
@@ -58,7 +58,3 @@ registration handelbars
 
     </div>
 </div>
-
-
-
-{{>footer}}
