--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,8 @@
 {{>header}}
-<div class="background-container">
+<div class="background-container h-screen fixed">
   <div class="overlay">
     <div class="text">
       <p>STEVENS OVERFLOW</p>
     </div>
   </div>
 </div>
-{{>footer}}
