--- a/views/partials/community-summary.handlebars
+++ b/views/partials/community-summary.handlebars
@@ -1,4 +1,5 @@
 <a href="/communities/{{_id}}">
   <h2>{{title}}</h2>
-  <p>{{description}}</p>  
+  <p>{{description}}</p>
+  <p>{{members}}</p>  
 </a>
