--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -1,11 +1,14 @@
-<form action="/create" method="POST">
+<form action="/communities/create" method="POST">
 
-  <label>Name:</label>
-  <input name="name">
-
+  <label>Title:</label>
+  <input name="title">
+  <br>
+  <label>Email:</label>
+  <input name="email">
+  <br>
   <label>Description:</label>
   <textarea name="description"></textarea> 
-  
+  <br>
   <button>Create</button>
 
 </form>
