--- a/views/partials/community-summary.handlebars
+++ b/views/partials/community-summary.handlebars
@@ -1,5 +1,12 @@
+
+
+
 <a href="/communities/{{_id}}">
   <h2>{{title}}</h2>
   <p>{{description}}</p>
-  <p>{{members}}</p>  
+  <p>
+    {{#each members}}
+      {{email}}
+    {{/each}} 
+  </p>
 </a>
