--- a/views/userActivity.handlebars
+++ b/views/userActivity.handlebars
@@ -1,7 +1,7 @@
 {{>header}}
 <div id="activity-div" class="m-5 min-h-[70vh] bg-gray-300 flex flex-col">
 
-    <div id="topDiv" class="bg-red-700 h-[7vh] w-full flex items-center justify-evenly">
+    <div id="topDiv" class="bg-blue-900 h-[7vh] w-full flex items-center justify-evenly">
         <p class="bigText font-bold text-black text-lg">Name: {{user.firstName}} {{user.lastName}}</p>
         <p class="bigText font-bold text-black text-lg">Stevens Email: {{user.stevensEmail}}</p>
         <p class="bigText font-bold text-black text-lg">Academic Status: {{user.academicStatus}}</p>
@@ -28,7 +28,5 @@
     </div>
 
 </div>
-
-
 
 {{>footer}}
