--- a/public/css/users.css
+++ b/public/css/users.css
@@ -2,13 +2,13 @@
     position: relative;
     width: 100%;
     height: 90vh;
-    background-image: url('../images/stevens-background.jpg'); /* Replace with your image URL */
+    background-image: url('../images/stevens-background.jpg'); 
     background-size: cover;
     background-position: center;
   }
 
   .overlay {
-    background-color: rgba(0, 0, 0, 0.3); /* Adjust the opacity and color as needed */
+    background-color: rgba(0, 0, 0, 0.3); 
     position: absolute;
     top: 0;
     left: 0;
