--- a/views/partials/headerEmpty.handlebars
+++ b/views/partials/headerEmpty.handlebars
@@ -1,10 +1,11 @@
-<header>
-  <nav class="navbar">
+<header class="bg-blue-900 text-white">
+  <nav class="flex items-center justify-between p-2">
     <a href="/">
-      <img src="/images/logo.png" alt="Logo" class="logo">
-    </a> 
-    <div class="nav-links text-slate-700">
-      <a href="#" class="hover:text-sky-700">Communities</a>
-      <a href="/questions" class="hover:text-sky-700">Questions</a>
+      <img src="/images/logo.png" alt="Logo" class="h-12">
+    </a>
+    <div class="flex ml-72 pl-72 space-x-16 ">
+      <a href="#" class="hover:text-blue-300">Communities</a>
+      <a href="/questions" class="hover:text-blue-300">Questions</a>
+    </div>
   </nav>
 </header>
