--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -1,10 +1,8 @@
-<form action="/communities/join?id={{id}}" method="POST">
-
- 
-  <label>Email:</label>
-  <input name="email" >
-  <br>
-
-  <button>Join</button>
-
-</form>
+<div class="joinFormWrapper">
+    <form action="/communities/join?id={{id}}" method="POST" class="joinForm">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email">
+      <br>
+      <button type="submit">Join</button>
+    </form>
+  </div>
