--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -1,4 +1,5 @@
-<form action="/communities/create" method="POST">
+{{>header}}
+{{!-- <form action="/communities/create" method="POST">
 
   <label>Title:</label>
   <input name="title">
@@ -11,4 +12,18 @@
   <br>
   <button>Create</button>
 
-</form>
+</form> --}}
+<div class="formWrapper">
+    <form action="/communities/create" method="POST" class="communityForm">
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="title">
+      <br>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email">
+      <br>
+      <label for="description">Description:</label>
+      <textarea id="description" name="description"></textarea> 
+      <br>
+      <button type="submit">Create</button>
+    </form>
+</div>
