--- a/views/partials/community-summary.handlebars
+++ b/views/partials/community-summary.handlebars
@@ -1,12 +1,6 @@
 
 
 
-<a href="/communities/{{_id}}">
-  <h2>{{title}}</h2>
+  <h1><a href="/communities/{{_id}}">{{title}} </a></h1>
   <p>{{description}}</p>
-  <p>
-    {{#each members}}
-      {{email}}
-    {{/each}} 
-  </p>
-</a>
+
