--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -14,6 +14,7 @@
 
 </form> --}}
 <div class="formWrapper">
+  <div class="formInside">
     <form action="/communities/create" method="POST" class="communityForm">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title">
@@ -26,4 +27,5 @@
       <br>
       <button type="submit">Create</button>
     </form>
+  </div>
 </div>
