--- a/public/css/communities.css
+++ b/public/css/communities.css
@@ -52,7 +52,17 @@
     flex: 1;
     height: 100vh;
   }
-
+  .flex {
+    display: flex;
+  }
+  
+  .flex-1 {
+    flex: 1;
+  }
+  
+  .flex-2 {
+    flex: 2; 
+  }
   .communitiesWrapper {
     display: flex;
     flex-wrap: wrap;
@@ -84,6 +94,15 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin-top: 10px;
+  }
+  .formInside {
+    /* Example styles for form */
+    width: 600px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
   }
   
   /* Form styles */
@@ -201,4 +220,10 @@
  
   .sectionList li:hover {
     background-color: #e0e0e0;
+  }
+  .navWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; /* Adjust the height as needed */
   }
