--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 {{>header}}
-<div class="background-container">
+<div class="background-container h-screen">
   <div class="overlay">
     <div class="text">
       <p>STEVENS OVERFLOW</p>
