--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,14 +1,25 @@
 <div class="footer">
   <div class="footer-content">
-    <div class="footer-section about">
-      <h2>About Us</h2>
-      <p>This website is build by four friends as our final project for the class CS-546-A, at Stevens Institute of Technology</p>
+    <div class="footer-section contact">
+      <h2>Anishkumar Rasik Dhamelia</h2>
+      <p>Email: <a href="mailto:adhameli@stevens.edu">adhameli@stevens.edu</a></p>
+      <p>CWID: 20009488</p>
     </div>
     <div class="footer-section contact">
-      <h2>Contact Us</h2>
-      <p>Email: adhameli@stevens.edu</p>
-      <p>Phone: +1 (347) 888-2708</p>
+      <h2>Vivaswanth Kashyap Madhusudhana</h2>
+      <p>Email: <a href="mailto:vmadhusu1@stevens.edu">vmadhusu1@stevens.edu</a></p>
+      <p>CWID: 20022231</p>
+    </div>    
+    <div class="footer-section contact">
+      <h2>Nirmohi Samirbhai Patel</h2>
+      <p>Email: <a href="mailto:npatel24@stevens.edu">npatel24@stevens.edu</a></p>
+      <p>CWID: 20009631</p>
     </div>
+    <div class="footer-section contact">
+      <h2>Dhruvin Popatbhai Vaghasiya</h2>
+      <p>Email: <a href="mailto:dvaghasi@stevens.edu">dvaghasi@stevens.edu</a></p>
+      <p>CWID: 20018155</p>
+    </div>    
   </div>
   <div class="footer-bottom">
     <p>&copy; 2023 Stevens Institute of Technology | All rights reserved.</p>
