--- a/views/communities.handlebars
+++ b/views/communities.handlebars
@@ -1,12 +1,14 @@
 
-{{>headerEmpty}}
+{{>header}}
 <nav class="navWrapper">
   <div class="search mr-10 ml-10">
       <span class="material-symbols-outlined pb-2 mr-2 ml-5">search</span>
       <textarea class="mr-10" name="search" id="search" cols="75" rows="1" placeholder="Enter keywords relevent to your search"></textarea>
   </div>
   <div class="spacer"></div>
+  {{#if user}}
   <a href="/communities/create" class="createCommunityButton">Create Community</a>
+  {{/if}}
 </nav>
 <div class="communitiesWrapper flex flex-wrap justify-around">
       {{#each communities}}
