--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -19,9 +19,6 @@
       <label for="title">Title:</label>
       <input type="text" id="title" name="title">
       <br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email">
-      <br>
       <label for="description">Description:</label>
       <textarea id="description" name="description"></textarea> 
       <br>
@@ -29,3 +26,5 @@
     </form>
   </div>
 </div>
+
+{{>footer}}
