--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -18,9 +18,11 @@
     <form action="/communities/create" method="POST" class="communityForm">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title">
+      <span class="error" id="titleError"></span>
       <br>
       <label for="description">Description:</label>
-      <textarea id="description" name="description"></textarea> 
+      <textarea id="description" name="description"></textarea>
+      <span class="error" id="descriptionError"></span> 
       <br>
       <button type="submit">Create</button>
     </form>
