--- a/views/userActivity.handlebars
+++ b/views/userActivity.handlebars
@@ -18,8 +18,8 @@
     </div>
 
     <div id="bottomDiv" class="bg-gray-300 flex-grow flex items-center justify-evenly flex-wrap">
-        {{#if activity.communitiesCreated.length}}
-            {{#each activity.communitiesCreated}}
+        {{#if activity.communitiesJoined.length}}
+            {{#each activity.communitiesJoined}}
                 <p>{{this}}</p>
             {{/each}}
         {{else}}
