--- a/views/newCommunity.handlebars
+++ b/views/newCommunity.handlebars
@@ -1,21 +1,7 @@
 {{>header}}
-{{!-- <form action="/communities/create" method="POST">
-
-  <label>Title:</label>
-  <input name="title">
-  <br>
-  <label>Email:</label>
-  <input name="email">
-  <br>
-  <label>Description:</label>
-  <textarea name="description"></textarea> 
-  <br>
-  <button>Create</button>
-
-</form> --}}
 <div class="formWrapper">
   <div class="formInside">
-    <form action="/communities/create" method="POST" class="communityForm">
+    <form action="/communities/create" method="POST" class="communityForm", id="communityForm">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title">
       <span class="error" id="titleError"></span>
@@ -23,10 +9,12 @@
       <label for="description">Description:</label>
       <textarea id="description" name="description"></textarea>
       <span class="error" id="descriptionError"></span> 
+      {{#if message.length}}
+        <p class="error">{{message}}</p>
+      {{/if}}
       <br>
       <button type="submit">Create</button>
     </form>
   </div>
 </div>
-
 {{>footer}}
