userActivity page update 1

--- a/views/userActivity.handlebars
+++ b/views/userActivity.handlebars
@@ -18,13 +18,7 @@
     </div>
 
     <div id="bottomDiv" class="bg-gray-300 flex-grow flex items-center justify-evenly flex-wrap">
-        {{#if activity.communitiesJoined.length}}
-            {{#each activity.communitiesJoined}}
-                <p>{{this}}</p>
-            {{/each}}
-        {{else}}
-        <p>No Communities Created</p>
-        {{/if}}
+        <ul id="container"></ul>
     </div>
 
 </div>
