--- a/public/css/userActivity.css
+++ b/public/css/userActivity.css
@@ -98,3 +98,22 @@ a:hover {
     border: 5px solid #000000;
     width: 99.5%;
   }
+
+  .communitySquare { 
+    min-width: 100vh; 
+    background-color: #3498db;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
+  .communityTitle {
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: center;
+  }
+
+  .communityDescription {
+    margin-top: 10px;
+    text-align: center;
+  }
