--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -1,7 +1,7 @@
 {{>search}}
 
 <div class="pageWrapper flex flex-row flex-nowrap bg-inherit">
-  <div class="leftWrapper basis-1/5 border-2">1</div>
+  <div class="leftWrapper basis-1/5 border-2 h-screen">1</div>
     <div class="questionsWrapper basis-3/5">
       <div class="flex flex-row py-4 border-b-2">
         <div class="basis-4/5"><h1 class="my-4 mx-8 text-4xl font-bold">{{title}}</h1></div>
@@ -46,6 +46,6 @@
           </div>
         {{/if}}
     </div>
-  <div class="rightWrapper basis-1/5 border-2">3</div>
+  <div class="rightWrapper basis-1/5 border-2 h-screen">3</div>
 </div>
 
