--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,17 +7,12 @@ min-height: 100vh;
 display: flex;
 flex-direction: column;
 }
-.navbar 
+/* .navbar 
 {
-
-background-color: #fff;
-padding: 15px;
 display: flex;
-justify-content: space-between;
 align-items: center;
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
-height: 10vh;
-}
+} */
 
 .logo 
 {
