--- a/views/communities.handlebars
+++ b/views/communities.handlebars
@@ -10,14 +10,16 @@
   <a href="/communities/create" class="createCommunityButton">Create Community</a>
   {{/if}}
 </nav>
-<div class="communitiesWrapper flex flex-wrap justify-around">
-      {{#each communities}}
-        <div class="communitySquare border-solid border-2 rounded-lg p-4 m-4">
-        <a href="/communities/{{_id}}">
-          <h2 class="communityTitle">{{title}}</h2>
-          <p class="communityDescription"> Description: {{description}}</p>
-        </a>
-        </div>
-      {{/each}}
+<div class="h-screen">
+  <div class="communitiesWrapper flex flex-wrap justify-around">
+        {{#each communities}}
+          <div class="communitySquare border-solid border-2 rounded-lg p-4 m-4">
+          <a href="/communities/{{_id}}">
+            <h2 class="communityTitle">{{title}}</h2>
+            <p class="communityDescription"> Description: {{description}}</p>
+          </a>
+          </div>
+        {{/each}}
+  </div>
 </div>
 {{>footer}}
