--- a/views/newQuestion.handlebars
+++ b/views/newQuestion.handlebars
@@ -16,7 +16,7 @@
     </div>
 
     <div class="basis-3/4">
-      <form action="/questions/question/edit/{{question._id}}" method="post">
+      <form action="/questions/question/edit/{{question._id}}" method="post" id="createQuestionForm">
 
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="questionTitle">Title</label><br>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="basis-3/4">
-      <form action="/questions/question" method="post">
+      <form action="/questions/question" method="post" id="createQuestionForm">
 
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="questionTitle">Title</label><br>
