--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,26 +1,24 @@
-
-<header class="bg-blue-900 text-white">
-  <nav class="flex items-center justify-between p-2">
-    <a href="/">
-      <img src="/images/logo.png" alt="Logo" class="h-12">
+<header class="bg-gray-800 text-gray-100">
+  <nav class="flex items-center justify-between p-4">
+    <a href="/" class="flex items-center">
+      <img src="/images/logo.png" alt="Logo" class="h-12 mr-3">
+      <span class="text-xl font-semibold">Stevens Overflow</span>
     </a>
-    <div class="flex ml-72 pl-72 space-x-16 ">
-      <div class="ml-48">
+    <div class="flex space-x-8">
       {{#if user}}
-      <a href="/userActivity" class="hover:text-blue-300">{{user.stevensEmail}}</a>
+        <a href="/userActivity" class="hover:text-blue-400">{{user.stevensEmail}}</a>
       {{/if}}
-      </div>
-      <a href="/communities" class="hover:text-blue-300">Communities</a>
-      <a href="/questions" class="hover:text-blue-300">Questions</a>
+      <a href="/communities" class="hover:text-blue-400">Communities</a>
+      <a href="/questions" class="hover:text-blue-400">Questions</a>
     </div>
     {{#if user}}
-    <button class="logout-btn text-white font-bold py-2 px-4 mx-2 rounded focus:outline-none focus:shadow-outline">
-      Logout
-    </button>
+      <button class="logout-btn bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        Logout
+      </button>
     {{else}}
-    <button class="login-btn bg-blue-600 hover:bg-sky-700 text-white font-bold py-2 px-4 mx-2 rounded focus:outline-none focus:shadow-outline">
-      Login
-    </button>
+      <button class="login-btn bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        Login
+      </button>
     {{/if}}
   </nav>
 </header>
