frontend validation, search bug fix, css fixes

--- a/views/communities.handlebars
+++ b/views/communities.handlebars
@@ -10,7 +10,7 @@
   <a href="/communities/create" class="createCommunityButton">Create Community</a>
   {{/if}}
 </nav>
-<div class="h-screen">
+<div class="min-h-screen">
   <div class="communitiesWrapper flex flex-wrap justify-around">
         {{#each communities}}
           <div class="communitySquare border-solid border-2 rounded-lg p-4 m-4">
