--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -2,7 +2,7 @@
 <div class="communityPageWrapper flex flex-row justify-around">
 
   <!-- Members Section -->
-  <div class="membersSection border-solid border-2 rounded-lg p-4 m-4 flex-1">
+  <div class="membersSection border-solid border-2 rounded-lg p-4 m-4 flex-1 min-h-screen">
     <h2 class="sectionTitle">Members</h2>
     <ul class="sectionList">
         <li>{{creater}} (Community Leader)</li>
@@ -36,7 +36,7 @@
   </div>
 
   <!-- Other Community Details Section -->
-  <div class="otherDetailsSection border-solid border-2 rounded-lg p-4 m-4 flex-1">
+  <div class="otherDetailsSection border-solid border-2 rounded-lg p-4 m-4 flex-1 min-h-screen">
     <h2 class="sectionTitle">Community Details</h2>
     <p>Name: {{title}}</p>
     <p>Description: {{description}}</p>
