--- a/views/newQuestion.handlebars
+++ b/views/newQuestion.handlebars
@@ -27,18 +27,21 @@
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="problemDetails">What are the details of your problem?</label><br>
         <p class="text-xs ml-5 mt-1 text-slate-500">Introduce the problem and expand on what you put in the title. Minimum 20 characters.</p>
+        <p class="error-message text-red-500 text-xs ml-5" id="problemDetailsError"></p>
         <textarea class="ml-5 mt-2 focus:decoration-wavy" name="problemDetails" id="problemDetails" cols="75" rows="6">{{question.problemDetails}}</textarea><br>
       </div>
 
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="attemptDetails">What did you try and what where you expecting?</label><br>
         <p class="text-xs ml-5 mt-1 text-slate-500">Describe what you tried, what you expected to happen, and what actually resulted. Minimum 20 characters</p>
+        <p class="error-message text-red-500 text-xs ml-5" id="attemptDetailsError"></p>
         <textarea class="ml-5 mt-2 focus:decoration-wavy" name="attemptDetails" id="attemptDetails" cols="75" rows="6">{{question.attemptDetails}}</textarea><br>
       </div>
 
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="tags">tags</label>
         <p class="text-xs ml-5 mt-1 text-slate-500">Add Tags to desribe separated by a comma(,) to describe what your question is about. </p>
+        <p class="error-message text-red-500 text-xs ml-5" id="tagsError"></p>
         <textarea class="ml-5 mt-2" name="tags" id="tags" cols="75" rows="1">{{question.tagsObj}}</textarea><br>
       </div>
       
@@ -72,24 +75,28 @@
         <label class="ml-5 text-sm font-semibold" for="questionTitle">Title</label><br>
         <p class="text-xs ml-5 mt-1 text-slate-500">Be specific and imagine you’re asking a question to another person.</p>
         <textarea class="ml-5 mt-2 focus:decoration-wavy" name="title" id="questionTitle" cols="75" rows="1"></textarea><br>
+        <p class="error-message text-red-500 text-xs ml-5" id="titleError"></p>
       </div>
       
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="problemDetails">What are the details of your problem?</label><br>
         <p class="text-xs ml-5 mt-1 text-slate-500">Introduce the problem and expand on what you put in the title. Minimum 20 characters.</p>
         <textarea class="ml-5 mt-2 focus:decoration-wavy" name="problemDetails" id="problemDetails" cols="75" rows="6"></textarea><br>
+        <p class="error-message text-red-500 text-xs ml-5" id="problemDetailsError"></p>
       </div>
 
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="attemptDetails">What did you try and what where you expecting?</label><br>
         <p class="text-xs ml-5 mt-1 text-slate-500">Describe what you tried, what you expected to happen, and what actually resulted. Minimum 20 characters</p>
         <textarea class="ml-5 mt-2 focus:decoration-wavy" name="attemptDetails" id="attemptDetails" cols="75" rows="6"></textarea><br>
+        <p class="error-message text-red-500 text-xs ml-5" id="attemptDetailsError"></p>
       </div>
 
       <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid  rounded-lg">
         <label class="ml-5 text-sm font-semibold" for="tags">tags</label>
         <p class="text-xs ml-5 mt-1 text-slate-500">Add Tags to desribe separated by a comma(,) to describe what your question is about. </p>
         <textarea class="ml-5 mt-2" name="tags" id="tags" cols="75" rows="1"></textarea><br>
+        <p class="error-message text-red-500 text-xs ml-5" id="tagsError"></p>
       </div>
       
       <button name="submit" value="SUBMIT" id="createQuestionBtn" class="rounded-lg px-2 py-2 bg-sky-600 text-white hover:bg-sky-700">SUBMIT</button><br>
