header and header-empty difference solved

--- a/views/partials/headerEmpty.handlebars
+++ b/views/partials/headerEmpty.handlebars
@@ -1,11 +1,11 @@
-<header class="bg-blue-900 text-white">
-  <nav class="flex items-center justify-between p-2">
+<header class="bg-gray-800 text-gray-100">
+  <nav class="flex items-center justify-between p-4">
     <a href="/">
       <img src="/images/logo.png" alt="Logo" class="h-12">
     </a>
-    <div class="flex ml-72 pl-72 space-x-16 ">
-      <a href="/communities" class="hover:text-blue-300">Communities</a>
-      <a href="/questions" class="hover:text-blue-300">Questions</a>
+    <div class="flex space-x-8">
+      <a href="/communities" class="hover:text-blue-400">Communities</a>
+      <a href="/questions" class="hover:text-blue-400">Questions</a>
     </div>
   </nav>
 </header>
