comments added to questions

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -34,7 +34,7 @@
 
 
 
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -45,7 +45,7 @@
 </head>
 
 <body class="bg-gray-100">
-    <main class="max-w-4xl mx-auto py-8">
+    <main class="max-w-4xl mx-auto py-8"> --}}
 
         <div class="new-comment">
             <h2 class="text-2xl font-bold mb-4">Add a Comment</h2>
@@ -73,11 +73,11 @@
             {{/each}}
         </div>
 
-    </main>
+    {{!-- </main>
 
     <footer class="bg-gray-200 py-4 text-center">
         <p>&copy; comment for questions</p>
     </footer>
 </body>
 
-</html>
+</html> --}}
