--- a/views/newcomment.handlebars
+++ b/views/newcomment.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div class="newCommentWrapper container mx-auto py-8 box-border box-content">
+<div class="newCommentWrapper container mx-auto py-8 box-border box-content">
     <h1 class="ml-10 pl-6 text-2xl font-bold">{{title}}</h1>
     <div class="pl-8 ml-8 pt-8 flex flex-col">
         <div
@@ -12,6 +12,7 @@
         <div class="basis-3/4">
             <form action="/comments/comment" method="post">
 
+                <input type="hidden" name="questionId" value="{{questionId}}">
                 <div class="fieldWrapper bg-white py-6 px-6 my-4 w-fit border-solid rounded-lg">
                     <label class="ml-5 text-sm font-semibold" for="commenter">Commenter</label><br>
                     <input type="text" class="ml-5 mt-2" name="commenter" id="commenter" required><br>
@@ -30,4 +31,4 @@
             </form>
         </div>
     </div>
-</div> --}}
+</div>
