--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -13,7 +13,7 @@
   </div>
 
   <!-- Questions Section -->
-  <div class="questionsSection border-solid border-2 rounded-lg p-4 m-4 flex-2">
+  <div class="questionsSection border-solid border-2 min-h-screen scroll-smooth overflow-scroll rounded-lg p-4 m-4 flex-2">
     <h2 class="sectionTitle">Questions</h2>
       {{#each questions}}
         <div class="questionWrapper1 flex flex-row border-b-2 px-2">
