--- a/public/css/userActivity.css
+++ b/public/css/userActivity.css
@@ -7,13 +7,13 @@ max-height: 7vh;
     position: relative;
     width: 100%;
     height: 90vh;
-    background-image: url('../images/stevens-background.jpg'); /* Replace with your image URL */
+    background-image: url('../images/stevens-background.jpg');
     background-size: cover;
     background-position: center;
   }
 
 .overlay {
-background-color: rgba(0, 0, 0, 0.3); /* Adjust the opacity and color as needed */
+background-color: rgba(0, 0, 0, 0.3);
 position: absolute;
 top: 0;
 left: 0;
