--- a/views/question.handlebars
+++ b/views/question.handlebars
@@ -23,6 +23,12 @@
         </div>
         <span class="text-xs font-light ml-96 mt-2 text-gray-500">asked by</span>
         <span class="text-sm text-sky-600 ml-96">- {{question.stevensEmail}}</span>
+        {{#if owner}}
+        <div class="operations my-4 mx-4 text-sm font-light"> 
+          <span class="hover:text-sky-700 hover:cursor-pointer " id="editQuestion">edit &nbsp;</span>&nbsp;
+          <span class="hover:text-sky-700 hover:cursor-pointer " id="deleteQuestion">delete</span>  
+        </div>
+        {{/if}}
         <div class="commentsSection">
           <h2 class="text-xl font-semibold mt-8">Comments</h2>
           {{#each comment}}
@@ -41,14 +47,9 @@
             </div>
           {{/each}}
         </div>
-        {{#if owner}}
-        <div class="operations my-4 mx-4 text-sm font-light"> 
-          <span class="hover:text-sky-700 hover:cursor-pointer " id="editQuestion">edit &nbsp;</span>&nbsp;
-          <span class="hover:text-sky-700 hover:cursor-pointer " id="deleteQuestion">delete</span>  
-        </div>
-        {{/if}}
+
         <div>
-          <a href="/questions/{{question._id}}/comments/comment" class="addCommentButton mt-4 px-4 py-2 bg-sky-600 text-white rounded-md hover:bg-sky-700">Add a Comment</a>
+          <a href="/questions/{{question._id}}/comments/comment" class="addCommentButton mt-4 px-2 py-2 bg-sky-600 text-white rounded-md hover:bg-sky-700">Comment</a>
         </div>
 
       </div>
